--- a/job-portal/src/index.css
+++ b/job-portal/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Damion&family=Lilita+One&family=Sigmar&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Damion&family=Lilita+One&family=Playfair:wght@300&family=Sigmar&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
