--- a/job-portal/src/App.css
+++ b/job-portal/src/App.css
@@ -1,11 +1,15 @@
 html,
 body {
-  overflow-wrap: normal;
-
   overflow-x: hidden;
+  min-height: 100vh;
+
   height: 100%;
 }
 * {
   margin: 0;
   padding: 0;
 }
+/* .Footer {
+  position: sticky;
+  top: 100%;
+} */
