--- a/job-portal/src/App.css
+++ b/job-portal/src/App.css
@@ -13,3 +13,11 @@ body {
   position: sticky;
   top: 100%;
 } */
+@keyframes slideAnimation {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
