--- a/job-portal/src/index.css
+++ b/job-portal/src/index.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ul {
+   list-style-type: disc;
+}
+
+.ql-editor {
+   min-height: 250px;
+   background-color: #e8f6f0;
+}
